# tams_bartender_recognition

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/apriltags2/: tags.yaml
launch/: apriltags2.launch  bringup.launch  bringup_astra.launch  cluster_classification.launch  collect_label_samples.launch  demo.launch  demo.rviz  glass_recognition.launch  orbbec_astra_ip.launch  pcl_object_recognition.launch  pcl_object_recognition_ur5.launch  recognition_pipeline.launch  tams_bartender_recognition.launch  tams_ur5_setup.launch  tams_ur5_setup_without_bottle_detection.launch
meshes/: bottle-binary.stl  bottle_small.stl  glass-binary.stl
models/default/: labels_v3.txt  model_default.h5  model_v3.h5
models/tiago_labels/: model_v1.h5
models/tiago_labels_2/: labels_v1.txt  model_v1.h5
msg/: RecognizedObject.msg  RecognizedObjectArray.msg  SegmentedBottle.msg  SegmentedBottleArray.msg  SegmentedObject.msg  SegmentedObjectArray.msg
scripts/: bottle_classification_node.py  call_action_test.py  classification_node.py  classifier.py  extract_pointcloud.py  label_classifier.py  pitcher_classifier.py  pointcloud_parser.py  sample_collector.py  stub_classifier.py  visualize_pointcloud.py
scripts/models/: labels_v2.txt
scripts/tests/: bottle_action_test.py  glass_action_test.py
src/: .bottle_recognition.cpp.swp  bottle_recognition.cpp  bottle_recognition_action.cpp  cylinder_segment.cpp  detect_bottles_action.cpp  detect_glass_action.cpp  extract_floor.cpp  handle_cylinder_segments.cpp  object_segmentation.cpp
srv/: SegmentationSwitch.srv
tools/: split_dataset.py
