<?xml version="1.0"?>
<package format="2">
  <name>tams_bartender_recognition</name>
  <version>0.0.0</version>
  <description>The tams_bartender_recognition package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="1kayser@informatik.uni-hamburg.de">Henning Kayser</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>apriltags2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>visualization_msg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tiago_bartender_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>apriltags2_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>visualization_msg</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tiago_bartender_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
